--- a/SpatialAudio/SpatialAudio.vcxproj
+++ b/SpatialAudio/SpatialAudio.vcxproj
@@ -69,16 +69,37 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
+    <IncludePath>D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_ttf\include;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_mixer\include;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL\include;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_image\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_ttf\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_mixer\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_image\libx86;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutDir>$(SolutionDir)$(Configuration)\</OutDir>
+    <IncludePath>D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_ttf\include;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_mixer\include;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL\include;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_image\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_ttf\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_mixer\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_image\libx86;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <IncludePath>D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_ttf\include;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_mixer\include;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL\include;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_image\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_ttf\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_mixer\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_image\libx86;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <IncludePath>D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_ttf\include;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_mixer\include;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL\include;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_image\include;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_ttf\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_mixer\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_image\libx86;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <AdditionalIncludeDirectories>D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_ttf\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_mixer\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_image\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL\libx86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -87,9 +108,11 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -100,11 +123,15 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <AdditionalIncludeDirectories>D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <SubSystem>Windows</SubSystem>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_ttf\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_mixer\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_image\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL\libx86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -115,11 +142,13 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <SubSystem>Windows</SubSystem>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
