--- a/SpatialAudio/SpatialAudio.vcxproj.filters
+++ b/SpatialAudio/SpatialAudio.vcxproj.filters
@@ -17,16 +17,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="j1App.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="j1Audio.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="j1Input.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="j1Module.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="j1Render.h">
@@ -62,18 +56,14 @@
     <ClInclude Include="PugiXml\src\pugixml.hpp">
       <Filter>Tools\PuguiXML</Filter>
     </ClInclude>
+    <ClInclude Include="j1App.h" />
+    <ClInclude Include="j1Module.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="j1App.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
     <ClCompile Include="j1Audio.cpp">
       <Filter>Modules</Filter>
     </ClCompile>
     <ClCompile Include="j1Input.cpp">
-      <Filter>Modules</Filter>
-    </ClCompile>
-    <ClCompile Include="j1Main.cpp">
       <Filter>Modules</Filter>
     </ClCompile>
     <ClCompile Include="j1Render.cpp">
@@ -91,5 +81,7 @@
     <ClCompile Include="PugiXml\src\pugixml.cpp">
       <Filter>Tools\PuguiXML</Filter>
     </ClCompile>
+    <ClCompile Include="j1App.cpp" />
+    <ClCompile Include="j1Main.cpp" />
   </ItemGroup>
 </Project>
