--- a/SpatialAudio/SpatialAudio.vcxproj
+++ b/SpatialAudio/SpatialAudio.vcxproj
@@ -80,12 +80,12 @@
     <LibraryPath>D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_ttf\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_mixer\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_image\libx86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_ttf\include;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_mixer\include;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL\include;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_image\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_ttf\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_mixer\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_image\libx86;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(IncludePath)</IncludePath>
+    <LibraryPath>$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_ttf\include;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_mixer\include;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL\include;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_image\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_ttf\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_mixer\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_image\libx86;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(IncludePath)</IncludePath>
+    <LibraryPath>$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -94,12 +94,12 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <AdditionalIncludeDirectories>D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_ttf\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_mixer\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_image\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL\libx86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -124,14 +124,14 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <AdditionalIncludeDirectories>D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <SubSystem>Windows</SubSystem>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_ttf\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_mixer\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL_image\libx86;D:\adri\uni\CITEM\2n\PROJECTE2\Presen_SpatialAAudio\TODOs\Spatial_Audio\SpatialAudio\SDL\libx86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
